# dodger_MPC_ws

./: README.md
mpc_bicycle/: CMakeLists.txt  package.xml
mpc_bicycle/config/: mpc_params.yaml
mpc_bicycle/global_path/: centered_trajectory.csv  centered_trajectory_100.csv  straight_trajectory.csv  straight_trajectory_100.csv  trajectory.csv  trajectory_100.csv
mpc_bicycle/launch/: mpc_bicycle.launch.py
mpc_bicycle/map/: autorace_track.pgm  autorace_track.yaml
mpc_bicycle/scripts/: downsample_csv.py
mpc_bicycle/src/: .code-workspace.code-workspace  csv_downsampler.cpp  csv_trajectory_visualizer.cpp  mpc_bicycle_node.cpp  odom_tf_broadcaster.cpp  odom_to_csv.cpp
